force-app/main/default/objects/Chat_Event__c/Chat_Event__c.object-meta.xml
<CustomObject>
    <label>Chat Event</label>
    <nameField>
        <displayFormat>CE-{0000000}</displayFormat>
        <label>Chat Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>