force-app/main/default/objects/Chat_Event__c/fields/Chat_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Chat_Transcript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chat Transcript</label>
    <referenceTo>LiveChatTranscript</referenceTo>
    <relationshipLabel>Chat Events</relationshipLabel>
    <relationshipName>Chat_Events</relationshipName>
    <type>Lookup</type>
</CustomField>