force-app/main/default/objects/Chat_Event__c/fields/Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Score__c</fullName>
    <formula>CASE(Sentiment__c,
                      &quot;positive&quot;, 1,
                      &quot;neutral&quot;, 0,
                      &quot;negative&quot;, -1,
                      0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sentiment Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>