force-app/main/default/objects/Chat_Event__c/fields/Translation__c.field-meta.xml
<CustomField>
    <fullName>Translation__c</fullName>
    <label>Translation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>