force-app/main/default/objects/Chat_Event__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Speech</fullName>
            </value>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>Calendar</fullName>
            </value>
            <value>
                <fullName>Map</fullName>
            </value>
            <value>
                <fullName>Breakpoint</fullName>
            </value>
            <value>
                <fullName>Money</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Einstein Insight</fullName>
            </value>
            <value>
                <fullName>End Chat</fullName>
            </value>
            <value>
                <fullName>Translation</fullName>
            </value>
            <value>
                <fullName>Intent</fullName>
            </value>
            <value>
                <fullName>Sentiment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>