force-app/main/default/objects/Chat_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Chat_Transcript__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Event_Time__c</columns>
    <columns>Type__c</columns>
    <columns>Transcript__c</columns>
    <columns>Spoken_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>